# json2csv_2

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: json2csv.html  search.js
src/json2csv/: __init__.py  cli.py  converter.py
tests/: conftest.py  test_converter.py
tests/fixtures/: anidado.json  array_simple.json  campos_faltantes.json  con_listas.json  objeto_unico.json
